--- a/TPI NewWare/Reportes/EmpleadoProyecto/EstadisticaHorasProyecto.rdlc
+++ b/TPI NewWare/Reportes/EmpleadoProyecto/EstadisticaHorasProyecto.rdlc
@@ -7,7 +7,7 @@
         <DataProvider>System.Data.DataSet</DataProvider>
         <ConnectString>/* Local Connection */</ConnectString>
       </ConnectionProperties>
-      <rd:DataSourceID>9627bc95-9610-4b88-9496-7ece1731d386</rd:DataSourceID>
+      <rd:DataSourceID>de9ea43a-e149-48d1-adc4-4ff4d5319ed3</rd:DataSourceID>
     </DataSource>
   </DataSources>
   <DataSets>
@@ -60,36 +60,6 @@
     <ReportSection>
       <Body>
         <ReportItems>
-          <Textbox Name="Textbox1">
-            <CanGrow>true</CanGrow>
-            <KeepTogether>true</KeepTogether>
-            <Paragraphs>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>=Globals!ExecutionTime</Value>
-                    <Style>
-                      <FontFamily>Century Gothic</FontFamily>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-            </Paragraphs>
-            <rd:DefaultName>Textbox1</rd:DefaultName>
-            <Left>12.51669cm</Left>
-            <Height>0.6cm</Height>
-            <Width>3.53188cm</Width>
-            <Style>
-              <Border>
-                <Style>None</Style>
-              </Border>
-              <PaddingLeft>2pt</PaddingLeft>
-              <PaddingRight>2pt</PaddingRight>
-              <PaddingTop>2pt</PaddingTop>
-              <PaddingBottom>2pt</PaddingBottom>
-            </Style>
-          </Textbox>
           <Rectangle Name="Rectangle2">
             <ReportItems>
               <Textbox Name="Textbox2">
@@ -133,7 +103,7 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value>Distribucion de empleados</Value>
+                        <Value>Tiempo de proyecto</Value>
                         <Style>
                           <FontFamily>Century Gothic</FontFamily>
                           <FontSize>16pt</FontSize>
@@ -162,11 +132,9 @@
               </Textbox>
             </ReportItems>
             <KeepTogether>true</KeepTogether>
-            <Top>0.77639cm</Top>
             <Left>0.09102cm</Left>
             <Height>1.5cm</Height>
             <Width>16.32797cm</Width>
-            <ZIndex>1</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -175,23 +143,11 @@
             </Style>
           </Rectangle>
           <Line Name="Line2">
-            <Top>3.08806cm</Top>
+            <Top>2.31167cm</Top>
             <Left>0.09101cm</Left>
             <Height>0cm</Height>
             <Width>16.32797cm</Width>
-            <ZIndex>2</ZIndex>
-            <Style>
-              <Border>
-                <Style>Solid</Style>
-              </Border>
-            </Style>
-          </Line>
-          <Line Name="Line1">
-            <Top>9.07481cm</Top>
-            <Left>0.09101cm</Left>
-            <Height>0cm</Height>
-            <Width>16.32797cm</Width>
-            <ZIndex>3</ZIndex>
+            <ZIndex>1</ZIndex>
             <Style>
               <Border>
                 <Style>Solid</Style>
@@ -219,20 +175,22 @@
             <ChartSeriesHierarchy>
               <ChartMembers>
                 <ChartMember>
-                  <Label>legajo</Label>
+                  <Label>horas</Label>
                 </ChartMember>
               </ChartMembers>
             </ChartSeriesHierarchy>
             <ChartData>
               <ChartSeriesCollection>
-                <ChartSeries Name="legajo">
+                <ChartSeries Name="horas">
                   <ChartDataPoints>
                     <ChartDataPoint>
                       <ChartDataPointValues>
-                        <Y>=Count(Fields!legajo.Value)</Y>
+                        <Y>=Sum(Fields!horas.Value)</Y>
                       </ChartDataPointValues>
                       <ChartDataLabel>
                         <Style />
+                        <UseValueAsLabel>true</UseValueAsLabel>
+                        <Visible>true</Visible>
                       </ChartDataLabel>
                       <Style />
                       <ChartMarker>
@@ -241,6 +199,7 @@
                       <DataElementOutput>Output</DataElementOutput>
                     </ChartDataPoint>
                   </ChartDataPoints>
+                  <Type>Shape</Type>
                   <Style />
                   <ChartEmptyPoints>
                     <Style />
@@ -488,15 +447,39 @@
                     </ChartAxisScaleBreak>
                   </ChartAxis>
                 </ChartValueAxes>
+                <ChartThreeDProperties>
+                  <Enabled>true</Enabled>
+                </ChartThreeDProperties>
                 <Style>
                   <BackgroundColor>#00ffffff</BackgroundColor>
                   <BackgroundGradientType>None</BackgroundGradientType>
                 </Style>
               </ChartArea>
             </ChartAreas>
+            <ChartLegends>
+              <ChartLegend Name="Empleados">
+                <Style>
+                  <BackgroundGradientType>None</BackgroundGradientType>
+                  <FontSize>8pt</FontSize>
+                </Style>
+                <Position>LeftTop</Position>
+                <DockToChartArea>Default</DockToChartArea>
+                <DockOutsideChartArea>true</DockOutsideChartArea>
+                <ChartLegendTitle>
+                  <Caption />
+                  <Style>
+                    <FontSize>8pt</FontSize>
+                    <FontWeight>Bold</FontWeight>
+                    <TextAlign>Center</TextAlign>
+                  </Style>
+                </ChartLegendTitle>
+                <HeaderSeparatorColor>Black</HeaderSeparatorColor>
+                <ColumnSeparatorColor>Black</ColumnSeparatorColor>
+              </ChartLegend>
+            </ChartLegends>
             <ChartTitles>
               <ChartTitle Name="Default">
-                <Caption>Distribucion de personal en proyectos</Caption>
+                <Caption>Horas por proyecto</Caption>
                 <Style>
                   <BackgroundGradientType>None</BackgroundGradientType>
                   <FontSize>9pt</FontSize>
@@ -526,11 +509,11 @@
               </Style>
             </ChartNoDataMessage>
             <DataSetName>EmpleadosProyecto</DataSetName>
-            <Top>3.67453cm</Top>
+            <Top>2.48806cm</Top>
             <Left>0.09102cm</Left>
-            <Height>5.07957cm</Height>
+            <Height>5.63397cm</Height>
             <Width>15.95755cm</Width>
-            <ZIndex>4</ZIndex>
+            <ZIndex>2</ZIndex>
             <Style>
               <Border>
                 <Color>LightGrey</Color>
@@ -540,36 +523,49 @@
               <BackgroundGradientType>None</BackgroundGradientType>
             </Style>
           </Chart>
+          <Line Name="Line1">
+            <Top>8.29842cm</Top>
+            <Left>0.09101cm</Left>
+            <Height>0cm</Height>
+            <Width>16.32797cm</Width>
+            <ZIndex>3</ZIndex>
+            <Style>
+              <Border>
+                <Style>Solid</Style>
+              </Border>
+            </Style>
+          </Line>
         </ReportItems>
-        <Height>3.65475in</Height>
+        <Height>3.32959in</Height>
         <Style />
       </Body>
       <Width>6.5in</Width>
       <Page>
-        <PageFooter>
-          <Height>1.03188cm</Height>
+        <PageHeader>
+          <Height>0.68792cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
-            <Textbox Name="Textbox18">
+            <Textbox Name="Textbox1">
               <CanGrow>true</CanGrow>
               <KeepTogether>true</KeepTogether>
               <Paragraphs>
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>Pag.</Value>
-                      <Style />
+                      <Value>=Globals!ExecutionTime</Value>
+                      <Style>
+                        <FontFamily>Century Gothic</FontFamily>
+                      </Style>
                     </TextRun>
                   </TextRuns>
                   <Style />
                 </Paragraph>
               </Paragraphs>
-              <rd:DefaultName>Textbox18</rd:DefaultName>
-              <Top>0.17639cm</Top>
-              <Left>14.59398cm</Left>
+              <rd:DefaultName>Textbox1</rd:DefaultName>
+              <Left>12.97812cm</Left>
               <Height>0.6cm</Height>
-              <Width>0.85958cm</Width>
+              <Width>3.53188cm</Width>
               <Style>
                 <Border>
                   <Style>None</Style>
@@ -580,6 +576,18 @@
                 <PaddingBottom>2pt</PaddingBottom>
               </Style>
             </Textbox>
+          </ReportItems>
+          <Style>
+            <Border>
+              <Style>None</Style>
+            </Border>
+          </Style>
+        </PageHeader>
+        <PageFooter>
+          <Height>0.9525cm</Height>
+          <PrintOnFirstPage>true</PrintOnFirstPage>
+          <PrintOnLastPage>true</PrintOnLastPage>
+          <ReportItems>
             <Textbox Name="Textbox17">
               <CanGrow>true</CanGrow>
               <KeepTogether>true</KeepTogether>
@@ -599,6 +607,35 @@
               <Left>15.45357cm</Left>
               <Height>0.6cm</Height>
               <Width>0.595cm</Width>
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+                <PaddingLeft>2pt</PaddingLeft>
+                <PaddingRight>2pt</PaddingRight>
+                <PaddingTop>2pt</PaddingTop>
+                <PaddingBottom>2pt</PaddingBottom>
+              </Style>
+            </Textbox>
+            <Textbox Name="Textbox18">
+              <CanGrow>true</CanGrow>
+              <KeepTogether>true</KeepTogether>
+              <Paragraphs>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Pag.</Value>
+                      <Style />
+                    </TextRun>
+                  </TextRuns>
+                  <Style />
+                </Paragraph>
+              </Paragraphs>
+              <rd:DefaultName>Textbox18</rd:DefaultName>
+              <Top>0.17639cm</Top>
+              <Left>14.59399cm</Left>
+              <Height>0.6cm</Height>
+              <Width>0.85958cm</Width>
               <ZIndex>1</ZIndex>
               <Style>
                 <Border>
@@ -635,5 +672,5 @@
     </GridLayoutDefinition>
   </ReportParametersLayout>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
-  <rd:ReportID>0814ca72-88ec-4dc3-9788-2ab260c83431</rd:ReportID>
+  <rd:ReportID>62bba69e-e330-4b52-8584-ef3e71d8fe07</rd:ReportID>
 </Report>
